# system-configuration

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: config.ini
src/system_configuration/: main.py
src/system_configuration/config/: settings.py
src/system_configuration/controllers/: main_controller.py  network_controller.py  puppet_controller.py
src/system_configuration/models/: data_model.py
src/system_configuration/services/: config_service.py  logging_service.py  theme_service.py
src/system_configuration/ui/: main_window.py
src/system_configuration/ui/dialogs/: about_dialog.py
src/system_configuration/ui/widgets/: network_tab.py  puppet_tab.py
src/system_configuration/utils/: config_utils.py  file_utils.py  logger.py  logging_utils.py  theme.py
src/system_configuration/views/: main_view.py  network_view.py  puppet_view.py
src/system_configuration/workers/: puppet_worker.py
src/tests/: test_main_window.py
