[tool.poetry]
name = "system-configuration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

#[tool.poetry.source]
#name = "custom-repo"
#url = "https://example.com/repository/simple"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "5.15.11"
pyqt5-qt5 = "5.15.2"
pyqt5-sip = "12.16.0"
setuptools = "^75.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"

[tool.poetry.scripts]
system_configuration = "system_configuration.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
