[tool.poetry]
name = "system-configuration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
pyqt5 = "5.15.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
pyinstaller = "^6.1.0"

[tool.poetry.scripts]
system_configuration = "system_configuration.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
