[tool.poetry]
name = "system-configuration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyqt6 = "^6.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
pyinstaller = "^6.1.0"

[tool.poetry.scripts]
system_configuration = "system_configuration.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
